bug-fix: speaker image not showing on netlify

--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,6 @@ input::-webkit-inner-spin-button {
        }
     .speaker{
         background-image: var(--imagePath);
-        background-color: var(--background-color);
        }
     .speaker--hover{
         background-image: none;
